# jdl-symphony-core

./: .env  .gitignore  CLAUDE.md  Justfile  README.md  alembic.ini  architecture.md  backend_spec.md  docker-compose.yml  project-plan.md  pyproject.toml  todo.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
demos/: README.md  demo_api.py  demo_application_layer.py  demo_config.py  demo_database.py  demo_database_models.py  demo_domain_models.py  demo_domain_services.py  demo_repositories.py  run_all_demos.py
src/symphony/: config.py  main.py
src/symphony/application/: __init__.py  dto.py  use_cases.py
src/symphony/application/commands/: __init__.py  base.py  repo.py  user_profile.py  vault.py  workspace.py
src/symphony/application/queries/: __init__.py  base.py  repo.py  user_profile.py  vault.py  workspace.py
src/symphony/config/: __init__.py  demo.py  settings.py
src/symphony/domain/: __init__.py  exceptions.py  unit_of_work.py
src/symphony/domain/models/: __init__.py  repo.py  user_profile.py  vault.py  workspace.py
src/symphony/domain/repositories/: __init__.py  base.py  repo.py  user_profile.py  vault.py  workspace.py
src/symphony/domain/services/: __init__.py  repo.py  user_profile.py  vault.py  workspace.py
src/symphony/infrastructure/database/: base.py  connection.py  types.py  unit_of_work.py
src/symphony/infrastructure/database/models/: __init__.py  repo.py  user_profile.py  vault.py  workspace.py
src/symphony/infrastructure/database/repositories/: __init__.py  base.py  repo.py  user_profile.py  vault.py  workspace.py
